<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.view.fragments.HomeFragment">

    <!-- Initial Loading -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/view_animation"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:visibility="visible"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loader" />

    <LinearLayout
        android:id="@+id/view_start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginHorizontal="8dp"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:fontFamily="sans-serif-black"
            android:gravity="start|center"
            android:padding="4dp"
            android:text="@string/let_s_eat_nquality_food"
            android:textColor="@color/text_primary"
            android:textSize="28sp" />

        <!-- Search View -->
        <RelativeLayout
            android:id="@+id/view_search"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/rectangle_1"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableStart="@drawable/baseline_search_24"
                android:drawablePadding="4dp"
                android:fontFamily="sans-serif"
                android:hint="@string/search"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:textColor="@color/text_light"
                android:textSize="14sp"
                tools:ignore="Autofill,RtlSymmetry,TextFields" />

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Static view -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_near_restaurant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:padding="4dp"
                        android:text="@string/near_restaurant"
                        android:textColor="@color/text_primary"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_see_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="2dp"
                        android:layout_toEndOf="@id/tv_near_restaurant"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="end|center"
                        android:padding="4dp"
                        android:text="@string/see_all"
                        android:textColor="@color/text_primary"
                        android:textSize="14sp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:layout_below="@id/tv_near_restaurant"
                        android:layout_margin="6dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            android:gravity="start|center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginEnd="8dp"
                                android:layout_weight="0.4"
                                android:scaleType="centerCrop"
                                android:src="@drawable/dummy_restaurant"
                                tools:ignore="ContentDescription" />

                            <RelativeLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.6"
                                android:padding="6dp">

                                <TextView
                                    android:id="@+id/tv_restaurant_name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentStart="true"
                                    android:layout_alignParentTop="true"
                                    android:fontFamily="sans-serif-black"
                                    android:gravity="start|center"
                                    android:singleLine="true"
                                    android:text="@string/blue_restaurant"
                                    android:textColor="@color/text_primary"
                                    android:textSize="16sp" />

                                <TextView
                                    android:id="@+id/tv_timings"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_above="@id/tv_address"
                                    android:layout_below="@id/tv_restaurant_name"
                                    android:layout_marginTop="4dp"
                                    android:fontFamily="sans-serif-medium"
                                    android:singleLine="true"
                                    android:text="@string/_10_00am_03_30pm"
                                    android:textColor="@color/text_light"
                                    android:textSize="14sp" />

                                <TextView
                                    android:id="@+id/tv_address"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentStart="true"
                                    android:layout_alignParentBottom="true"
                                    android:layout_toStartOf="@id/tv_ratings"
                                    android:fontFamily="sans-serif-medium"
                                    android:gravity="start|center"
                                    android:singleLine="true"
                                    android:text="@string/steve_st_road"
                                    android:textColor="@android:color/holo_red_light"
                                    android:textSize="14sp" />

                                <TextView
                                    android:id="@+id/tv_ratings"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentEnd="true"
                                    android:layout_alignParentBottom="true"
                                    android:layout_marginStart="5dp"
                                    android:fontFamily="sans-serif-medium"
                                    android:gravity="bottom|center"
                                    android:singleLine="true"
                                    android:text="@string/_4_5"
                                    android:textColor="@color/text_light"
                                    android:textSize="14sp" />
                            </RelativeLayout>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </RelativeLayout>

                <!-- Search results view -->
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="4dp"
                    android:minHeight="50dp">

                    <ProgressBar
                        android:id="@+id/progress_circular"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp" />

                    <TextView
                        android:id="@+id/tv_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="8dp"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:paddingHorizontal="8dp"
                        android:singleLine="true"
                        android:text="@string/something_went_wrong"
                        android:textColor="@color/text_light"
                        android:textSize="14sp"
                        android:visibility="gone" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:spanCount="2"
                        tools:listitem="@layout/item_drinks" />

                </FrameLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</FrameLayout>